[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug = ["board_plugin/debug"]

[dependencies]
bevy = { version = "0.10.0"} # remove before publishing game
board_plugin = { path = "board_plugin" }


[workspace]
members = [
    "board_plugin"
]
