[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug = ["board_plugin/debug"]

[dependencies]
board_plugin = { path = "board_plugin" }
[dependencies.bevy]
version = "0.10"
default-features = true

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.10"
default-features = false
features = ["x11"]

[workspace]
members = [
    "board_plugin"
]
